<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bg_login" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="30.0sp" android:id="@id/b_IndividualQualifying" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/b_welcome_IndividualQualifying" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <Button android:textSize="30.0sp" android:id="@id/b_IndividualKickout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/b_welcome_IndividualKickOut" android:layout_below="@id/b_IndividualQualifying" android:layout_centerHorizontal="true" />
    <Button android:textSize="30.0sp" android:id="@id/b_TeamKickout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="53.0dip" android:text="@string/b_welcome_TeamKickOut" android:layout_below="@id/b_IndividualKickout" android:layout_centerHorizontal="true" />
    <Button android:textSize="30.0sp" android:id="@id/b_result" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/b_welcome_data" android:layout_below="@id/b_TeamKickout" android:layout_alignLeft="@id/b_TeamKickout" android:layout_alignRight="@id/b_TeamKickout" />
    <Button android:textSize="30.0sp" android:id="@id/b_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/b_welcome_help" android:layout_below="@id/b_result" android:layout_alignLeft="@id/b_result" android:layout_alignRight="@id/b_result" />
</RelativeLayout>